# anycommerce

./: .gitmodules  API_MIGRATION_PLAN.md  Dockerfile  README.md  justfile
frontend-v3/: index.html  package-lock.json  package.json  vite.config.ts
frontend-v3/src/: App.vue
frontend-v3/src/api/: index.ts
frontend-v3/src/components/Cart/: CartDisplay.vue
frontend-v3/src/components/Product/: ProductCard.vue
frontend-v3/src/stores/: cart.ts  product.ts
frontend-v3/src/types/: index.ts
wasm-api/: Cargo.toml
wasm-api/src/: lib.rs
wasm-api/src/cart/: mod.rs
wasm-api/src/dispatch/: mod.rs
wasm-api/src/product/: mod.rs
wasm-api/src/utils/: mod.rs
wasm-api/src/validation/: mod.rs
